fix object instantiation